objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AGB_Best_tigt__c</fullName>
        <formula>Last_Opportunity__r.Confirmed_Terms_And_Conditions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGB Bestätigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Holder__c</fullName>
        <label>Kontoinhaber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin__c</fullName>
        <formula>Last_Opportunity__r.Admin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aktenzeichen__c</fullName>
        <formula>Last_Opportunity__r.Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aktenzeichen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnfrageFilter__c</fullName>
        <formula>Last_Opportunity__r.AnfrageFilter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AnfrageFilter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anwalt__c</fullName>
        <formula>Last_Opportunity__r.Legal__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anwalt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auftragstyp__c</fullName>
        <formula>TEXT(Last_Opportunity__r.Assignment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auftragstyp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Follow_up_Count__c</fullName>
        <label>Anzahl Auto-Follow-ups</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Follow_up_Date__c</fullName>
        <label>Nächstes Auto-Follow-up</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Autostart_Auto_Follow_up_Journeys__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Follow-up Journeys automatisch starten</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BIC__c</fullName>
        <label>BIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bankname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearbeitungsnummer__c</fullName>
        <formula>Last_Opportunity__r.Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bearbeitungsnummer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactImpID__c</fullName>
        <externalId>true</externalId>
        <label>ContactImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Old_Org__c</fullName>
        <label>Created Date Old Org</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Count__c</fullName>
        <formula>Last_Opportunity__r.Document_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Upload_link_MC__c</fullName>
        <description>Field created to be used in Marketing cloud, once that the actual Document Upload link that comes from Opportunity is a Hyperlink and can not be used for marketing cloud.</description>
        <formula>$Label.SiteRoot + '/MissingDocuments?token=' + Last_Opportunity__r.Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Upload link MC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <formula>NOT(ISNULL(Newsletter_Confirmation_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Representative__c</fullName>
        <label>Email Repräsentant</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finanzierungsart__c</fullName>
        <formula>TEXT(Last_Opportunity__r.Financing_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finanzierungsart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ungültig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aktuellste Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_zu_Formularstufe_2__c</fullName>
        <formula>Last_Opportunity__r.Form_Step_2_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zu Formularstufe 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_zum_Dokumentenupload__c</fullName>
        <formula>Last_Opportunity__r.Link_zum_Dokumentenupload__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zum Dokumentenupload</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter_Confirmation_Date__c</fullName>
        <label>Newsletter Bestätigungsdatum</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Newsletter_Confirmation_Link__c</fullName>
        <formula>IF(Last_Opportunity__r.Account_Name__c = "VR24","https://forms.cloudworx.agency/verbraucherrechte24/newsletter-002/" + Id,"https://form.verbraucherhilfe24.de/newsletter-002/" + Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Newsletter Confirmation Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter Angemeldet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter_Registration_Date__c</fullName>
        <label>Newsletter Anmeldedatum</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <formula>Last_Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <formula>Last_Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pro__c</fullName>
        <formula>Last_Opportunity__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Produkt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <formula>IF(Title = "Herr" || TEXT(Salutation) = "Herr","Sehr geehrter Herr " + LastName,IF(Title = "Frau"|| TEXT(Salutation) = "Frau","Sehr geehrte Frau " + LastName,"Hallo " + FirstName + " " + LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Email__c</fullName>
        <label>Zweite Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Second_Phone__c</fullName>
        <label>Zweites Telefon</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Last_Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Started_Auto_Follow_up_Journey_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Started Auto-Follow-up Journey 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Anfrage__c</fullName>
        <formula>Last_Opportunity__r.Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Anfrage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Journey_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Journey 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique_Id</label>
        <length>62</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unternehmen__c</fullName>
        <formula>Last_Opportunity__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unternehmen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertriebstyp__c</fullName>
        <formula>TEXT(Last_Opportunity__r.Sales_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vertriebstyp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opp_Created_Date_old__c</fullName>
        <formula>Last_Opportunity__r.Created_Date_Old_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>opp_Created_Date_old</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_test__c</fullName>
        <formula>Account.Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Aktion__c</fullName>
        <label>Admin Aktion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_For_MC__c</fullName>
        <formula>OR(
Account_test__c = TRUE, Test__c, HasOptedOutOfEmail=TRUE,ISBLANK( Account.Name),Account.Test__c = TRUE,Last_Opportunity__r.Test__c =TRUE ,ISPICKVAL(Last_Opportunity__r.StageName,"Claim"),(CONTAINS(FirstName,"Test")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not For MC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Account__c</fullName>
        <label>Update Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Not_For_MC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Invalid</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.SALUTATION</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invalid__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Ungültig</label>
        <sharedTo>
            <group>VR24_VH24_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <validationRules>
        <fullName>IBAN</fullName>
        <active>true</active>
        <description>AND( !ISBLANK(IBAN__c) ,NOT(REGEX(IBAN__c, "[A-Z]{2}[0-9]{2}[A-Z]{4}[0-9]{14}")))</description>
        <errorConditionFormula>AND( !ISBLANK(IBAN__c) ,NOT(REGEX(IBAN__c, "[A-Z]{2}[0-9]{20}")))</errorConditionFormula>
        <errorDisplayField>IBAN__c</errorDisplayField>
        <errorMessage>Bitte geben Sie eine gültige IBAN an</errorMessage>
    </validationRules>
</CustomObject>